[package]
name = "zero-drift-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zero-drift-agent"
path = "src/main.rs"

[lib]
name = "zero_drift_agent"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
aomi-sdk = "3.0.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
schemars = "1.2"